@@ -9,7 +9,7 @@
 # terms of the BSD-3 license. We welcome feedback and contributions, see file
 # CONTRIBUTING.md for details.
 
-name: "Sanitizer"
+name: "Sanitizers"
 
 permissions:
   actions: write
@@ -27,8 +27,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Serial:
+  Sanitizers:
     runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        sanitizer:
+          - name: AddressSanitizer
+            flags: "-fsanitize=address
+                    -fno-omit-frame-pointer
+                    -fsanitize-address-use-after-scope"
+            env: ASAN_OPTIONS="detect_leaks=1,
+                               strict_init_order=1,
+                               strict_string_checks=1,
+                               check_initialization_order=1,
+                               detect_stack_use_after_return=1"
+          - name: UndefinedBehaviorSanitizer
+            flags: "-fsanitize=undefined -fno-omit-frame-pointer"
+            env: UBSAN_OPTIONS="print_stacktrace=1,halt_on_error=0"
+          - name: MemorySanitizer
+            flags: "-fsanitize=memory
+                    -fno-omit-frame-pointer
+                    -fno-optimize-sibling-calls
+                    -fsanitize-memory-track-origins=2"
+            env: MSAN_OPTIONS="poison_in_dtor=1"
 
     steps:
       - name: MFEM Checkout
@@ -47,12 +68,10 @@ jobs:
           mfem-dir: mfem
           build-system: make
           library-only: false
-          config-options:
+          config-options: |
             CXX="clang++-18"
-            CXXFLAGS="-g -O1 -std=c++17
-                      -fsanitize=address
-                      -fno-omit-frame-pointer
-                      -fsanitize-address-use-after-scope"
+            CXXFLAGS="-g -O1 -std=c++17 ${{ matrix.sanitizer.flags }}"
+            ${{ matrix.sanitizer.name == 'MemorySanitizer' && 'LDFLAGS="-fsanitize=memory"' || '' }}
 
       - name: MFEM Info
         working-directory: mfem
@@ -60,10 +79,6 @@ jobs:
 
       - name: MFEM Sanitize
         working-directory: mfem
-        run:
-          ASAN_OPTIONS="detect_leaks=1,
-                        strict_init_order=1,
-                        strict_string_checks=1,
-                        check_initialization_order=1,
-                        detect_stack_use_after_return=1"
+        run: |
+          ${{ matrix.sanitizer.env }}
           make test
